# typo_checker

./: Cargo.toml  README.md
src/: create_dict.py  dictionary.rs  lib.rs  main.rs
